// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField> tests <TextField> - DatePicker rendering - disabled 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'label'}
      isRequired={true}
    >
      <DatePicker
          id={'date-picker-id'}
          isDisabled={true}
          name={'name'}
          value={parseDate(name)}
          onChange={(e, newDate) => onDateChange(newDate, set__name,  name)}
        />
    </FormGroup>"
`;

exports[`<TextField> tests <TextField> - DatePicker rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'label'}
      isRequired={true}
    >
      <DatePicker
          id={'date-picker-id'}
          isDisabled={false}
          name={'name'}
          value={parseDate(name)}
          onChange={(e, newDate) => onDateChange(newDate, set__name,  name)}
        />
    </FormGroup>"
`;

exports[`<TextField> tests <TextField> - TextInput rendering - disabled 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'label'}
      isRequired={true}
    >
      <TextInput
        name={'name'}
        id={'id'}
        isDisabled={true}
        placeholder={''}
        type={'text'}
        value={name}
        onChange={(e, newValue) => set__name(newValue)}
        />
    </FormGroup>"
`;

exports[`<TextField> tests <TextField> - TextInput rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'label'}
      isRequired={true}
    >
      <TextInput
        name={'name'}
        id={'id'}
        isDisabled={false}
        placeholder={''}
        type={'text'}
        value={name}
        onChange={(e, newValue) => set__name(newValue)}
        />
    </FormGroup>"
`;
